# devpost-skill

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TOOLS_REFERENCE.md  endpoint_discovery_output.txt  endpoint_discovery_results.json  install.ps1  install.sh  pyproject.toml  test_mcp.py
.claude/commands/: devpost.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/skills/devpost-cli/: SKILL.md
docs/: AGENTS.md  API_DISCOVERY_RESULTS.md  MANUAL_TESTING.md  QUICK_TEST_REFERENCE.md  TESTING_SUMMARY.md
docs/workflows/: build-search-index.md  find-and-evaluate.md  find-teammates.md  monitor-deadlines.md  scout-competition.md  submit-project.md
scripts/: discover_endpoints.py  test_live_team_invites.py
src/devpost_cli/: __init__.py  __main__.py  api.py  cache.py  cli.py  core.py  host.py  host_schema.py  host_yaml.py  logging_config.py  project_schema.py  project_yaml.py  search_index.py  session.py
src/devpost_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/devpost_mcp/: __init__.py  __main__.py  cli.py  server.py
src/devpost_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_core_auth.py  test_core_client.py  test_devpost.py  test_integration_team_invites.py  test_playwright_scrapers.py  test_search_index.py  test_session.py
