[project]
name = "devpost-cli"
version = "0.1.0"
description = "CLI for browsing, searching, and submitting to Devpost hackathons"
dependencies = [
    "click>=8.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
devpost = "devpost_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
