[project]
name = "devpost-cli"
version = "0.5.0"
description = "CLI for browsing, searching, and submitting to Devpost hackathons"
dependencies = [
    "click>=8.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
devpost = "devpost_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "respx>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
